# open-with

./: .gitignore  CLAUDE.md  index.html  mise.toml  package-lock.json  package.json  reset  tsconfig.json  vite.config.ts
src/: App.svelte  main.ts  theme.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  lib.rs  main.rs  scanner.rs
src/lib/: api.ts  keymap.ts  types.ts
